# thepodium-hs

./: README.org  notes.org  podium.cabal  stack.yaml
sql/: podium.sql
src/Podium/Api/: Server.hs
src/Podium/DB/: Connect.hs  Manipulation.hs  Query.hs  Test.hs  Util.hs
src/Podium/DB/Table/: Account.hs  Post.hs
src/Podium/Html/: Base.hs  NewPost.hs  Post.hs
src/main/: Main.hs
