name:                podium
version:             0.1.0.0
synopsis:            API Backend for The Podium
description:         Please see README.org
homepage:            http://github.com/bryangarza/podium
license:             MIT
license-file:        LICENSE
author:              Bryan Garza
maintainer:          brygarza@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  exposed-modules:     Podium.Api.Server
                       Podium.DB.Connect
                       Podium.DB.Manipulation
                       Podium.DB.Query
                       Podium.DB.Test
                       Podium.DB.Util
                       Podium.DB.Table.Account
                       Podium.DB.Table.Post
                       Podium.Html.Base
                       Podium.Html.NewPost
                       Podium.Html.Post
  build-depends:       base
                     , aeson
                     , bytestring
                     , data-default
                     , either
                     , lens
                     , lucid
                     , mtl
                     , opaleye
                     , postgresql-simple
                     , product-profunctors
                     , pwstore-fast
                     , servant
                     , servant-lucid
                     , servant-server
                     , text
                     , time
                     , uuid
                     , uuid-aeson
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable podium
  hs-source-dirs:      src/main
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , bytestring
                     , data-default
                     , either
                     , lens
                     , lucid
                     , mtl
                     , opaleye
                     , postgresql-simple
                     , product-profunctors
                     , pwstore-fast
                     , podium
                     , servant
                     , servant-lucid
                     , servant-server
                     , text
                     , time
                     , uuid
                     , uuid-aeson
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

test-suite podium-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , podium
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bryangarza/podium
